# OpenSearch

./: .gitignore
distribution/src/config/: jvm.options  opensearch.yml
gradle/: run.gradle
modules/parquet-data-format/src/main/resources/native/macos-aarch64/: libparquet_dataformat_jni.d
modules/tiered-storage/: build.gradle
modules/tiered-storage/jni/: Cargo.toml
modules/tiered-storage/jni/src/: file_registry.rs  java_blob_store.rs  jni_bridge.rs  lib.rs  remote_object_store.rs  store_factory.rs  tiered_object_store.rs
modules/tiered-storage/src/main/resources/native/: libopensearch_tiered_storage_jni.dylib
modules/tiered-storage/src/yamlRestTest/resources/rest-api-spec/test/: 10_basic.yml
plugins/engine-datafusion/: Cargo.toml
plugins/engine-datafusion/jni/: Cargo.toml
plugins/engine-datafusion/jni/src/: cache.rs  cache_jni.rs  caching_object_store.rs  custom_cache_manager.rs  foyer_cache.rs  lib.rs  util.rs
plugins/engine-datafusion/jni/src/tiered/: file_registry.rs  foyer_cache.rs  foyer_cache_manager.rs  mod.rs  store_factory.rs  tiered_object_store.rs
sandbox/libs/tiered-storage/src/main/rust/src/: ffm.rs  ffm_tests.rs  tiered_object_store.rs  tiered_object_store_tests.rs
sandbox/plugins/analytics-backend-datafusion/rust/src/: api.rs  indexed_executor.rs  lib.rs  query_executor.rs  runtime_helpers.rs  session_context.rs
server/src/main/java/org/opensearch/index/: IndexModule.java  IndexService.java
server/src/main/java/org/opensearch/indices/: IndicesService.java  ShardLimitValidator.java
(+298 files in other folders)
