[package]
name = "opensearch-tiered-storage"
version = "0.1.0"
edition = "2021"
description = "Tiered storage for OpenSearch — FileRegistry, TieredObjectStore, RemoteObjectStore, and JNI bridge"
license = "Apache-2.0"

# Standalone — not part of any workspace
[workspace]

[lib]
name = "opensearch_tiered_storage"

[dependencies]
object_store = { version = "0.12.5", features = ["aws", "gcp", "azure"] }
async-trait = "0.1.89"
futures = "0.3"
dashmap = "5.5"
serde_json = "1.0"
async-stream = "0.3"
jni = "0.21"
chrono = "0.4"
bytes = "1.5"
vectorized-exec-spi = { path = "../../../libs/vectorized-exec-spi/rust" }
